--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "history": "3.0.0",
     "isomorphic-style-loader": "1.0.0",
     "jsonwebtoken": "7.0.0",
+    "jsx": "^0.9.89",
     "markdown-it": "6.0.5",
     "node-fetch": "1.5.3",
     "normalize.css": "4.1.1",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "pretty-error": "2.0.0",
-    "react": "15.1.0",
+    "react": "^15.3.2",
     "react-dom": "15.1.0",
     "sequelize": "3.23.3",
     "source-map-support": "0.4.0",
