--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pretty-error": "2.0.0",
     "react": "15.3.1",
     "react-dom": "15.3.1",
+    "react-fontawesome": "^1.2.0",
     "sequelize": "3.24.2",
     "source-map-support": "0.4.2",
     "sqlite3": "3.1.4",
