fix deploy url and update postcss-loader in npm

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "normalize.css": "4.2.0",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
+    "postcss-loader": "^0.13.0",
     "pretty-error": "2.0.0",
-    "react": "15.3.1",
+    "react": "^15.3.1",
     "react-dom": "15.3.1",
     "react-fontawesome": "^1.2.0",
     "sequelize": "3.24.2",
